tdf#114122 - Double click in special character dialog inserts a character

Change-Id: I8f8db851363344091294e2af43aba289ac160d98
Reviewed-on: https://gerrit.libreoffice.org/45952
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>